--- a/views/repo.jade
+++ b/views/repo.jade
@@ -2,8 +2,11 @@ doctype
 html
   head
     title= `${repo.full_name} Nekobuilder`
+    link(rel="stylesheet", href="/octicons/octicons.css")
   body
-    h1= repo.full_name
+    h1
+        = repo.full_name
+        a.mega-octicon.octicon-mark-github(href=repo.url, target="_blank")
     table
         tbody
             each build in builds
