--- a/views/repo.jade
+++ b/views/repo.jade
@@ -17,3 +17,4 @@ html
                     td= build.ref
                     td= build.commit_message
                     td= build.commit_author_name
+                    td= build.started
